<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout_NIC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/NIC"
            android:textColor="@color/primaryColor"
            android:textSize="24sp"
            tools:text="@string/NIC" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_NIA"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/NIA"
            android:textColor="@color/primaryColor"
            android:textSize="24sp"
            tools:text="@string/NIA" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_OIC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/OIC"
            android:textColor="@color/primaryColor"
            android:textSize="24sp"
            tools:text="@string/OIC" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_UII"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/UII"
            android:gravity="center"
            android:text="@string/UII"
            android:textColor="@color/primaryColor"
            android:textSize="24sp"
            tools:text="@string/UII" />
    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/linearLayout_btn"
            android:layout_centerHorizontal="false"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>-->
</LinearLayout>

