<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout_Age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/age_of_the_insured"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/borders"
                    android:hint="Enter age in years"
                    android:inputType="number"
                    android:paddingLeft="5dp" />

                <TextView
                    android:id="@+id/textViewLearn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="Learn ?"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="2dp"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/sum_insured_opted"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_sum_insured_opted"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/borders"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textViewLearn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text="Learn ?"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="2dp"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/spouse"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_spouse"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/borders"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/textViewLearn3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="Learn ?"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="2dp"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/child1"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_child1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/borders"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/textViewLearn4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="Learn ?"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="2dp"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/child2"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_child2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/borders"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/textViewLearn5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="Learn ?"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="2dp"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/diabetes"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_diabetes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/borders"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/textViewLearn6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="Learn ?"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <Button
                    android:id="@+id/button_Reset"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/reset_button"
                    android:text="@string/reset"
                    android:textColor="#00848B"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_Calculate"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/calculate_button"
                    android:text="@string/calculate"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!--<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

    </LinearLayout>-->


</RelativeLayout>
